--- a/src/app/dashboard/home/lease-detail/lease-detail.component.html
+++ b/src/app/dashboard/home/lease-detail/lease-detail.component.html
@@ -3,12 +3,12 @@
       <ul>
           <li>
               <label>Merchant Name:</label>
-              <span class="">Hubert Blaine Wolfeschlegelsteinhausenber</span>
+              <span class="">{{leaseData["Merchant Name"]}}</span>
           </li>
           <li>
               <label>
                   Merchant ID:</label>
-              <span class="">123-456-789</span>
+              <span class="">{{leaseData["Merchant ID"]}}</span>
           </li>
           <li>
               <label>Lease # : </label>
