--- a/src/app/auth/sign-up/signup-main/signup-main.component.html
+++ b/src/app/auth/sign-up/signup-main/signup-main.component.html
@@ -3,9 +3,11 @@
     <div class="col-sm-12 col-md-12 col-lg-5  offset-lg-1  ">
       <app-signup-form></app-signup-form>
     </div>
-    <div class="col-sm-12  col-md-12 col-lg-5    ">
+    <div class="col-sm-12  col-md-12 col-lg-5 d-md-block d-none    ">
       <app-signup-stat></app-signup-stat>
     </div>
 
   </div>
 </div>
+
+<!--h-->
