--- a/src/app/auth-temp/temp-signin/temp-signin.component.html
+++ b/src/app/auth-temp/temp-signin/temp-signin.component.html
@@ -6,12 +6,18 @@
         <div class="formWrapInner">
 
 
-          <h1 class="headingWrap">Sign in</h1>
+          <h1 class="headingWrap">Sign In</h1>
           <div class="tab-content" id="signin-tab-content">
 
             <div class="tab-pane fade show active" id="signup" role="tabpanel"
                  aria-labelledby="signup-tab">
-              <p class="loginDesc">Please fill all fields below</p>
+                 <div *ngIf="tempSignIn.submitted; else show">
+                    <p  class="loginDesc fd-bld">Your email or password is incorrect!</p>
+                 </div>
+
+                 <ng-template #show>
+                  <p class="loginDesc ">  Please complete all fields below</p>
+                 </ng-template>
 
               <!-- Sign In form -->
               <form #tempSignIn="ngForm" (submit)="tempSignInUser(tempSignIn)">
@@ -21,6 +27,7 @@
                     type="text"
                     class="form-control"
                     placeholder="Email"
+                    required
                     name="email"
                     ngModel
                   >
@@ -31,7 +38,8 @@
                   <input
                     type="password"
                     class="form-control"
-                    placeholder="Temp Password"
+                    placeholder="Temporary Password"
+                    required
                     name="tempPass"
                     ngModel
                   >
@@ -41,7 +49,8 @@
 
                 <button type="submit"
 
-                        class="btnSubmit btn btn-primary btn-lg btn-block">Sign In
+                        class="btnSubmit btn btn-primary btn-lg btn-block"
+                        [disabled]="!tempSignIn.valid">Sign In
                 </button>
 
 
