--- a/src/app/auth/sign-up/signup-form/signup-form.component.html
+++ b/src/app/auth/sign-up/signup-form/signup-form.component.html
@@ -1,5 +1,5 @@
 <h1 id="brandLogo" class="text-center">
-  <a><img src="./assets/img/firstdata_logo.svg"></a>
+  <a (click)="backToLandingPage()"><img src="./assets/img/firstdata_logo.svg"></a>
 </h1>
 <div class="formWrap ">
   <div class="formWrapInner exSpacer">
@@ -17,16 +17,22 @@
     <div class="tab-content" id="signin-tab-content">
 
 
-      <!--Sign in Tab Starts-->
+      <!--Sign in Tab Starts -->
       <div class="tab-pane fade  " id="signin" role="tabpanel" aria-labelledby="signin-tab">
 
 
         <!-- Start if signin form -->
         <form #signInReg="ngForm" (ngSubmit)="signInRegular(signInReg)">
-          <div>
-            <p class="loginDesc ">Please complete all fields below</p>
-            <p *ngIf="signInReg.submitted" class="loginDesc .fd-bld">Your email or password is incorrect!</p>
+
+
+          <div *ngIf="signInReg.submitted; else show">
+             <p  class="loginDesc fd-bld">Your email or password is incorrect!</p>
           </div>
+
+          <ng-template #show>
+           <p class="loginDesc ">  Please complete all fields below</p>
+          </ng-template>
+
           <div class="form-group emailWrap">
             <input
               type="text"
@@ -43,7 +49,7 @@
             <input
               type="password"
               class="form-control"
-              placeholder="Enter Password"
+              placeholder="Password"
               name="password"
               ngModel
               #password="ngModel"
@@ -54,12 +60,12 @@
 
           <button type="submit"
                   class="btnSubmit btn btn-primary btn-lg btn-block">
-            Submit
+                  Sign In
           </button>
 
 
         </form>
-        <p class="text-center footerTxt ">Forgot Password? <a (click)="resetRegPassword()" class=""><b>Reset </b></a>
+        <p class="text-center footerTxt ">Forgot Password? <a (click)="resetRegPassword()" class="link-style">Reset </a>
         </p>
 
         <!-- end of sign IN form-->
@@ -94,7 +100,6 @@
           </div>
 
 
-
           <div class="form-group">
             <input
               type="text"
@@ -105,9 +110,8 @@
               required
               #leaseNumber="ngModel"
             >
-            <div class="fd-error"  (click)="signUpForm.submitted = false" *ngIf="signUpForm.submitted">Incorrect Lease Key!</div>
+            <div class="fd-error"  (click)="signUpForm.submitted = false" *ngIf="signUpForm.submitted">Incorrect Lease Number!</div>
           </div>
-
 
           <div class="form-group">
             <input
@@ -119,7 +123,7 @@
               required
               #merchantDBA="ngModel"
             >
-            <div class="fd-error"  (click)="signUpForm.submitted = false" *ngIf="signUpForm.submitted" >Incorrect MerchnatDBA Key!</div>
+            <div class="fd-error"  (click)="signUpForm.submitted = false" *ngIf="signUpForm.submitted" >Incorrect Merchnat DBA!</div>
 
           </div>
           <!-- Recaptch -->
@@ -128,6 +132,7 @@
 
               name="captcha"
               required
+              ngModel
             ></re-captcha>
           </div>
 
