--- a/src/app/forgot-password/reset/reset.component.html
+++ b/src/app/forgot-password/reset/reset.component.html
@@ -11,10 +11,12 @@
           <div class="tab-content" id="signin-tab-content">
 
             <div class="tab-pane fade show active" id="signup" role="tabpanel" aria-labelledby="signup-tab">
+              <div>
               <p class="loginDesc">Enter your email and we’ll send a link to reset your password to the address we have
                 on file.
               </p>
-
+              <p *ngIf="resetPass.submitted" class="loginDesc fd-bld">Email not registered. Please try again!</p>
+            </div>
               <form #resetPass="ngForm" (submit)="forgotPass(resetPass)">
                 <div class="form-group emailWrap">
                   <input
@@ -24,13 +26,14 @@
                     placeholder="Email"
                     name="email"
                     ngModel
+                    required
 
                   >
 
                 </div>
 
 
-                <button type="submit" class="btnSubmit btn btn-primary btn-lg btn-block">Submit</button>
+                <button type="submit" class="btnSubmit spe-sign btn btn-primary btn-lg btn-block" [disabled]="!resetPass.valid">Submit</button>
 
 
               </form>
