--- a/src/app/landing-page/land-head/land-head.component.html
+++ b/src/app/landing-page/land-head/land-head.component.html
@@ -2,12 +2,12 @@
         <div class="col-12 land-head ">
             <div class="row">
                 <div class="col-12 col-md-6 ">
-                    <h1 class="aLeft"><a ><img src="./assets/img/firstdata_logo.svg"></a></h1>
+                    <h1 class="aLeft"><a><img class="img-ctrl" src="./assets/img/firstdata_logo.svg"></a></h1>
                 </div>
-                <div class="col-12 col-md-6 aRight  mTop ">
+                <div class="col-12 col-md-6 aRight  mTop ctrl-sm-device ">
                     <button type="button" (click)="signIn()"
                             class="btn btn-lg fd-but-sign">
-                        Sign in
+                        Sign In
                     </button>
                   <span class="butSpacer "></span>
 
