--- a/src/app/thank/thank.component.html
+++ b/src/app/thank/thank.component.html
@@ -1,23 +1,20 @@
-<div id="signWrap" class=" h-100 container-fluid">
+<div id="signWrap" class="container-fluid">
   <div class="row">
-      <div class="col-sm-12 success-wrap  ">
-          <h1 id="brandLogo" class="text-center"><img src="./assets/img/firstdata_logo.svg"></h1>
-          <br><br><br>
-          <h1 class="text-center"><img src="./assets/img/TickIcon.svg"></h1>
-          <br>
-          <h1 class="text-center"><b>Thank you</b></h1>
-          <br>
-          <p class="text-center">Please check your email for instructions on resetting your password.</p>
-          <h6 class="text-center txt-sm">
-              <small>2017-2018 First Data Corporation. All Rights Reserved. <a href="#">Privacy
-                  Policy</a></small>
-          </h6>
-          <br>
-          <br>
-          <button type="submit" (click)="temp()"
-           class="btnSubmit btn btn-primary btn-lg btn-block">Done</button>
+    <div class="col-sm-12 success-wrap th-outer-wrap  ">
+      <h1 id="brandLogo" class="text-center"><img src="./assets/img/firstdata_logo.svg"></h1>
+      <h1 class="text-center th-logowrap"><img src="./assets/img/TickIcon.svg"></h1>
+      <h1 class="text-center th-head ">Thank you</h1>
+      <p class="text-center th-txt">Please check your email for instructions on resetting your password.</p>
+      <h6 class="text-center th-txt-sm">
+        2017-2018 First Data Corporation. All Rights Reserved. <a href="#">Privacy
+        Policy</a>
+      </h6>
 
-      </div>
+      <button type="submit" (click)="temp()"
+              class="btnSubmit btn btn-primary btn-lg btn-block">Done
+      </button>
+
+    </div>
 
   </div>
 </div>
