--- a/src/app/auth/sign-up/signup-form/signup-form.component.html
+++ b/src/app/auth/sign-up/signup-form/signup-form.component.html
@@ -5,12 +5,12 @@
   <div class="formWrapInner exSpacer">
     <ul class="nav nav-tabs" id="signin-tab" role="tablist">
       <li class="nav-item w-50 text-right">
-        <a class="nav-link " id="home-tab" data-toggle="tab" href="#signin" role="tab"
-           aria-controls="home" aria-selected="true">Sign In</a>
+        <a class="nav-link " id="home-tab" data-toggle="tab" [routerLink]="['/user/signin']" role="tab"
+           aria-controls="home" aria-selected="true" [ngClass]="{'active show':currentTab=='signin'}" >Sign In</a>
       </li>
       <li class="nav-item w-50">
-        <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#signup" role="tab"
-           aria-controls="profile" aria-selected="false">Sign Up</a>
+        <a class="nav-link active" id="profile-tab" data-toggle="tab" [routerLink]="['/user/signup']" role="tab"
+           aria-controls="profile" aria-selected="false" [ngClass]="{'active show':currentTab!='signin'}">Sign Up</a>
       </li>
 
     </ul>
@@ -18,7 +18,7 @@
 
 
       <!--Sign in Tab Starts -->
-      <div class="tab-pane fade  " id="signin" role="tabpanel" aria-labelledby="signin-tab">
+      <div class="tab-pane fade  " [ngClass]="{'active show':currentTab=='signin'}" id="signin" role="tabpanel" aria-labelledby="signin-tab">
 
 
         <!-- Start if signin form -->
@@ -76,7 +76,7 @@
 
       <!--Sign UP Tab Starts-->
 
-      <div class="tab-pane fade show active" id="signup" role="tabpanel"
+      <div class="tab-pane fade " [ngClass]="{'active show':currentTab!='signin'}" id="signup" role="tabpanel"
            aria-labelledby="signup-tab">
         <p class="loginDesc">Please complete all fields below</p>
 
