captcha referesh on validation error

--- a/src/app/auth-temp/change-temp-pass/change-temp-pass.component.html
+++ b/src/app/auth-temp/change-temp-pass/change-temp-pass.component.html
@@ -27,6 +27,7 @@
                       ngModel
                      required
                       #tempPass="ngModel"
+                      #tmpPass
                       pattern="Photon123"
                        >
                   <div *ngIf="!tempPass.valid">
