for last commit

--- a/src/app/auth-temp/change-temp-pass/change-temp-pass.component.html
+++ b/src/app/auth-temp/change-temp-pass/change-temp-pass.component.html
@@ -109,7 +109,7 @@
                       required
                       validateEqual="newPass"
                       #confPassword="ngModel"
-
+                      #cPass
                       >
                       <div *ngIf="!confPassword.valid">
 
