log out integrated

--- a/src/app/dashboard/left-side-bar/left-side-bar.component.html
+++ b/src/app/dashboard/left-side-bar/left-side-bar.component.html
@@ -9,7 +9,7 @@
       <div class="loginname">
           Mattie Garcia
       </div>
-      <div class="signout-Wrap">
+      <div class="signout-Wrap" (click)="logout()" >
           Sign out
       </div>
 
