new changes made in css

--- a/src/app/auth-temp/temp-signin/temp-signin.component.html
+++ b/src/app/auth-temp/temp-signin/temp-signin.component.html
@@ -1,7 +1,8 @@
 <div id="signWrap" class="container-fluid">
   <div class="row">
     <div class="col-sm-12">
-      <h1 id="brandLogo" class="text-center"><a><img src="./assets/img/firstdata_logo.svg"></a></h1>
+      <h1 id="brandLogo" class="text-center"><a><img class="img-ctrl" src="./assets/img/firstdata_logo.svg"></a></h1>
+      
       <div class="formWrap ">
         <div class="formWrapInner">
 
