--- a/src/app/auth/sign-up/signup-form/signup-form.component.html
+++ b/src/app/auth/sign-up/signup-form/signup-form.component.html
@@ -1,5 +1,5 @@
 <h1 id="brandLogo" class="text-center">
-  <a (click)="backToLandingPage()"><img src="./assets/img/firstdata_logo.svg"></a>
+  <a (click)="backToLandingPage()"><img class="img-ctrl" src="./assets/img/firstdata_logo.svg"></a>
 </h1>
 <div class="formWrap ">
   <div class="formWrapInner exSpacer">
