--- a/src/app/dashboard/home/lease-detail/lease-detail.component.html
+++ b/src/app/dashboard/home/lease-detail/lease-detail.component.html
@@ -1,9 +1,9 @@
 <div class="row db-lease-tab-cnt  py-4">
-  <div class=" col-6 ">
+  <div class="col-12 col-md-6 col-sm-12  ">
       <ul>
           <li>
               <label>Merchant Name:</label>
-              <span class="">{{leaseData["merchnatName"]}}</span>
+              <span class="">{{leaseData["merchantName"]}}</span>
           </li>
           <li>
               <label>
@@ -17,7 +17,7 @@
       </ul>
 
   </div>
-  <div class=" col-6 ">
+  <div class=" col-12 col-md-6 col-sm-12  ">
       <ul>
           <li>
               <label>Business Address: </label>
