--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-12 db-header ">
       <div class="row">
-          <div class="col-5 d-md-block d-sm-none d-none  logoWrap   ">
+          <div class="col-5 d-md-block logoWrap   ">
               <img class="" src="assets/img/firstdata_logo.svg">
           </div>
           <div class="col-12 col-md-7  ">
               <!--dropdown for Mobile-->
-              <div class="col-6 ">
+              <div class="col-6 fd-dd-mob ">
                   <div class="dropdown d-inline-block d-md-none d-sm-block pl-5 pt-3 ">
                       <button class="btn  dropdown-toggle btn-outline-primary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           -Select Product-
