--- a/src/app/dashboard/home/lease-block/lease-block.component.html
+++ b/src/app/dashboard/home/lease-block/lease-block.component.html
@@ -1,157 +1,158 @@
 <div class="row ">
   <div class="db-lease-wrap col-12 ">
 
-      <div id="carouselExampleControls1" class="carousel slide" data-interval="false" data-ride="carousel">
-          <div class="carousel-inner" role="listbox">
+    <!--carouselExampleControls1-->
+    <div id="fd-lease-blocks-wrap" class="carousel slide" data-interval="false" data-ride="carousel">
+      <div class="carousel-inner" role="listbox">
 
-              <div class="carousel-item  py-3 active">
-                  <div class="row">
-                      <div class="col-12  ">
-                          <div class="row">
-                              <!--one- card one-->
-                              <div class="col-12 col-sm-6  col-md-3  ">
-                                  <div class="cus-card active  p-5 col-12  ">
-                                      <span class="fd-badge">2</span>
-                                      <ul>
-                                          <li>
-                                              <label>Lease</label>
-                                              <br>
-                                              <span class="">052-5234567-000</span>
-                                          </li>
+        <div class="carousel-item  py-3 active">
+          <div class="row">
+            <div class="col-12  ">
+              <div class="row">
+                <!--one- card one-->
+                <div class="fd-lease-blocks col-12 col-sm-6  col-md-3  ">
+                  <div class="cus-card active  p-5 col-12  ">
+                    <span class="fd-badge">2</span>
+                    <ul>
+                      <li>
+                        <label>Lease</label>
+                        <br>
+                        <span class="">052-5234567-000</span>
+                      </li>
 
-                                      </ul>
-
-                                  </div>
-                              </div>
-                              <!--one- card two-->
-                              <div class="col-12 col-sm-6 col-md-3 d-none d-sm-block">
-                                  <div class="cus-card p-5 col-12  ">
-                                      <span class="fd-badge">2</span>
-
-                                      <ul>
-                                          <li>
-                                              <label>Lease</label>
-                                              <br>
-                                              <span class="">052-5234567-000</span>
-                                          </li>
-
-                                      </ul>
-
-                                  </div>
-                              </div>
-                              <!--one- card three-->
-                              <div class="col-12 col-sm-6 col-md-3 d-none d-md-block">
-                                  <div class="cus-card p-5 col-12  ">
-                                      <span class="fd-badge">2</span>
-
-                                      <ul>
-                                          <li>
-                                              <label>Lease</label>
-                                              <br>
-                                              <span class="">052-5234567-000</span>
-                                          </li>
-
-                                      </ul>
-
-                                  </div>
-                              </div>
-                              <!--one- card four-->
-                              <div class="col-12 col-sm-6 col-md-3 d-none d-md-block">
-                                  <div class="cus-card p-5 col-12  ">
-                                      <ul>
-                                          <li>
-                                              <label>Lease</label>
-                                              <br>
-                                              <span class="">052-5234567-000</span>
-                                          </li>
-
-                                      </ul>
-
-                                  </div>
-                              </div>
-                          </div>
-
-                      </div>
+                    </ul>
 
                   </div>
-              </div>
-              <div class="carousel-item  py-3">
-                  <div class="row">
-                      <div class="col-12  ">
-                          <div class="row">
-                              <!--one- card one-->
-                              <div class="col-12 col-sm-6  col-md-3  ">
-                                  <div class="cus-card  p-5 col-12  ">
-                                      <ul>
-                                          <li>
-                                              <label>Lease</label>
-                                              <br>
-                                              <span class="">052-5234567-000</span>
-                                          </li>
+                </div>
+                <!--one- card two-->
+                <div class=" fd-lease-blocks col-12 col-sm-6 col-md-3 d-none d-sm-block">
+                  <div class="cus-card p-5 col-12  ">
+                    <span class="fd-badge">2</span>
 
-                                      </ul>
+                    <ul>
+                      <li>
+                        <label>Lease</label>
+                        <br>
+                        <span class="">052-5234567-000</span>
+                      </li>
 
-                                  </div>
-                              </div>
-                              <!--one- card two-->
-                              <div class="col-12 col-sm-6 col-md-3 d-none d-sm-block   ">
-                                  <div class="cus-card p-5 col-12  ">
-                                      <ul>
-                                          <li>
-                                              <label>Lease</label>
-                                              <br>
-                                              <span class="">052-5234567-000</span>
-                                          </li>
-
-                                      </ul>
-
-                                  </div>
-                              </div>
-                              <!--one- card three-->
-                              <div class="col-12 col-sm-6 col-md-3 d-none d-md-block ">
-                                  <div class="cus-card p-5 col-12  ">
-                                      <ul>
-                                          <li>
-                                              <label>Lease</label>
-                                              <br>
-                                              <span class="">052-5234567-000</span>
-                                          </li>
-
-                                      </ul>
-
-                                  </div>
-                              </div>
-                              <!--one- card four-->
-                              <div class="col-12 col-sm-6 col-md-3 d-none d-md-block     ">
-                                  <div class="cus-card p-5 col-12  ">
-                                      <ul>
-                                          <li>
-                                              <label>Lease</label>
-                                              <br>
-                                              <span class="">052-5234567-000</span>
-                                          </li>
-
-                                      </ul>
-
-                                  </div>
-                              </div>
-                          </div>
-
-
-                      </div>
+                    </ul>
 
                   </div>
+                </div>
+                <!--one- card three-->
+                <div class=" fd-lease-blocks col-12 col-sm-6 col-md-3 d-none d-md-block">
+                  <div class="cus-card p-5 col-12  ">
+                    <span class="fd-badge">2</span>
+
+                    <ul>
+                      <li>
+                        <label>Lease</label>
+                        <br>
+                        <span class="">052-5234567-000</span>
+                      </li>
+
+                    </ul>
+
+                  </div>
+                </div>
+                <!--one- card four-->
+                <div class=" fd-lease-blocks col-12 col-sm-6 col-md-3 d-none d-md-block">
+                  <div class="cus-card p-5 col-12  ">
+                    <ul>
+                      <li>
+                        <label>Lease</label>
+                        <br>
+                        <span class="">052-5234567-000</span>
+                      </li>
+
+                    </ul>
+
+                  </div>
+                </div>
               </div>
+
+            </div>
+
           </div>
-          <a class="carousel-control-prev"  role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next"  role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-          </a>
+        </div>
+        <div class="carousel-item  py-3">
+          <div class="row">
+            <div class="col-12  ">
+              <div class="row">
+                <!--one- card one-->
+                <div class=" fd-lease-blocks col-12 col-sm-6  col-md-3  ">
+                  <div class="cus-card  p-5 col-12  ">
+                    <ul>
+                      <li>
+                        <label>Lease</label>
+                        <br>
+                        <span class="">052-5234567-000</span>
+                      </li>
+
+                    </ul>
+
+                  </div>
+                </div>
+                <!--one- card two-->
+                <div class=" fd-lease-blockscol-12 col-sm-6 col-md-3 d-none d-sm-block   ">
+                  <div class="cus-card p-5 col-12  ">
+                    <ul>
+                      <li>
+                        <label>Lease</label>
+                        <br>
+                        <span class="">052-5234567-000</span>
+                      </li>
+
+                    </ul>
+
+                  </div>
+                </div>
+                <!--one- card three-->
+                <div class="fd-lease-blocks col-12 col-sm-6 col-md-3 d-none d-md-block ">
+                  <div class="cus-card p-5 col-12  ">
+                    <ul>
+                      <li>
+                        <label>Lease</label>
+                        <br>
+                        <span class="">052-5234567-000</span>
+                      </li>
+
+                    </ul>
+
+                  </div>
+                </div>
+                <!--one- card four-->
+                <div class="fd-lease-blocks col-12 col-sm-6 col-md-3 d-none d-md-block     ">
+                  <div class="cus-card p-5 col-12  ">
+                    <ul>
+                      <li>
+                        <label>Lease</label>
+                        <br>
+                        <span class="">052-5234567-000</span>
+                      </li>
+
+                    </ul>
+
+                  </div>
+                </div>
+              </div>
+
+
+            </div>
+
+          </div>
+        </div>
       </div>
+      <a href="#fd-lease-blocks-wrap" class="carousel-control-prev" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a href="#fd-lease-blocks-wrap" class="carousel-control-next" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
 
 
   </div>
